# mpv

./: CMakeLists.txt  Toolchain.cmake  crossfile.txt  meson.build  meson_options.txt  wscript  wscript_build.py
common/: msg.c
etc/vita/: input.conf
filters/: f_autoconvert.c  f_decoder_wrapper.c  filter.h  user_filters.c
input/: input.c
libmpv/: render.h  render_gxm.h
misc/: thread_tools.c
options/: options.c
osdep/: io.c  io.h  main-fn-vita.c  path-vita.c  timer-linux.c  timer.c
osdep/switch/sys/: mman.h
osdep/vita/: emulator.h  emulator_platform.c  emulator_render.c  ui.h  ui_context.h  ui_device.h  ui_driver.h  ui_emulator.c  ui_panel.h  ui_panel_player.c  vita_platform.c  vita_render.c
osdep/vita/include/: config.h  nanovg_gxm.h  nanovg_gxm_utils.h
osdep/vita/include/sys/: mman.h
player/: client.c  command.c  configfiles.c  loadfile.c  main.c  scripting.c
stream/: stream_file.c
sub/: filter_regex.c  osd.c  osd_dummy.c  osd_libass.c  sd_ass.c
switch/: config.h
switch/player/: builtin_conf.inc
video/: csputils.c  csputils.h  fmt-conversion.c  img_format.h
video/decode/: vd_lavc.c
